# cloud-audit-main

./: .cloud-audit.example.yml  .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
scripts/: generate_demo_gif.py
src/cloud_audit/: __init__.py  cli.py  config.py  models.py  scanner.py
src/cloud_audit/providers/: __init__.py  base.py
src/cloud_audit/providers/aws/: __init__.py  provider.py
src/cloud_audit/providers/aws/checks/: __init__.py  cloudtrail.py  cloudwatch.py  config_.py  ec2.py  ecs.py  eip.py  guardduty.py  iam.py  kms.py  lambda_.py  rds.py  s3.py  secrets.py  ssm.py  vpc.py
src/cloud_audit/providers/gcp/: __init__.py  provider.py
src/cloud_audit/providers/gcp/checks/: __init__.py  bigquery.py  cloudsql.py  compute.py  firewall.py  gke.py  iam.py  kms.py  logging_.py  storage.py
src/cloud_audit/reports/: __init__.py  html.py  markdown.py  sarif.py
src/cloud_audit/reports/templates/: report.html.j2
tests/: conftest.py  test_cli.py  test_cli_scan.py  test_config.py  test_html.py  test_markdown.py  test_models.py  test_provider.py  test_sarif.py  test_scanner.py
tests/aws/: test_cloudtrail.py  test_cloudwatch.py  test_config.py  test_ec2.py  test_ecs.py  test_eip.py  test_guardduty.py  test_iam.py  test_kms.py  test_lambda.py  test_rds.py  test_s3.py  test_secrets.py  test_ssm.py  test_vpc.py
