[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloud-audit"
version = "0.4.1"
description = "Fast, opinionated AWS security scanner. Curated checks. Zero noise. Copy-paste fixes."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Mariusz Gebala", email = "kontakt@haitmg.pl" },
]
keywords = ["aws", "cloud", "audit", "security", "compliance", "cis", "scanner", "devops", "terraform"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    "boto3>=1.35.0",
    "typer>=0.15.0",
    "rich>=13.9.0",
    "pydantic>=2.10.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "boto3-stubs[essential]>=1.35.0",
    "moto[all]>=5.0.0",
]

[project.scripts]
cloud-audit = "cloud_audit.cli:app"

[project.urls]
Homepage = "https://github.com/gebalamariusz/cloud-audit"
Documentation = "https://github.com/gebalamariusz/cloud-audit#readme"
Repository = "https://github.com/gebalamariusz/cloud-audit"
Issues = "https://github.com/gebalamariusz/cloud-audit/issues"
Changelog = "https://github.com/gebalamariusz/cloud-audit/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/cloud_audit"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "SIM", "TCH"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"src/cloud_audit/providers/*/checks/*.py" = ["E501", "S112"]
"src/cloud_audit/cli.py" = ["TC003"]
"tests/**" = ["TC003"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
